--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>oss-parent</artifactId>
-        <groupId>org.sonatype.oss</groupId>
-        <version>7</version>
-    </parent>
+    <groupId>com.breedish.test</groupId>
+    <artifactId>automator</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-    <groupId>com.lazerycode.jmeter</groupId>
-    <artifactId>jmeter-maven-plugin</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
-    <packaging>maven-plugin</packaging>
-    <name>JMeter Maven Plugin</name>
+    <name>Test Automator</name>
     <description>A plugin to allow you to run JMeter tests with Maven.</description>
-    <url>http://jmeter.lazerycode.com</url>
 
     <licenses>
         <license>
@@ -27,100 +22,18 @@
 
     <developers>
         <developer>
-            <id>Ardesco</id>
-            <name>Mark Collin</name>
-            <roles>
-                <role>Comitter</role>
-            </roles>
-        </developer>
-        <developer>
-            <id>afranken</id>
-            <name>Arne Franken</name>
-            <roles>
-                <role>Comitter</role>
-            </roles>
-        </developer>
-        <developer>
-            <id>Ronnie76er</id>
-            <name>Ron Alleva</name>
+            <id>breedish</id>
+            <name>Dzmitry Zenin</name>
             <roles>
                 <role>Comitter</role>
             </roles>
         </developer>
     </developers>
 
-    <contributors>
-        <contributor>
-            <name>Tom Coupland</name>
-        </contributor>
-        <contributor>
-            <name>Daniel Yokomizo</name>
-        </contributor>
-        <contributor>
-            <name>Gerd Aschemann</name>
-        </contributor>
-        <contributor>
-            <name>Yoann Ciabaud</name>
-        </contributor>
-        <contributor>
-            <name>Tim McCune</name>
-        </contributor>
-        <contributor>
-            <name>Jon Roberts</name>
-        </contributor>
-        <contributor>
-            <name>Jarrod Ribble</name>
-        </contributor>
-        <contributor>
-            <name>Fabrice Daugan</name>
-        </contributor>
-    </contributors>
-
     <issueManagement>
         <system>GitHub</system>
         <url>https://github.com/Ronnie76er/jmeter-maven-plugin/issues</url>
     </issueManagement>
-
-    <ciManagement>
-        <system>Teamcity</system>
-        <url>http://ci.lazerycode.com</url>
-    </ciManagement>
-
-    <mailingLists>
-        <mailingList>
-            <name>JMeter Maven Plugin Users</name>
-            <post>maven-jmeter-plugin-users@googlegroups.com</post>
-            <archive>https://groups.google.com/forum/?fromgroups#!forum/maven-jmeter-plugin-users</archive>
-        </mailingList>
-        <mailingList>
-            <name>JMeter Maven Plugin Devs</name>
-            <post>maven-jmeter-plugin-devs@googlegroups.com</post>
-            <archive>https://groups.google.com/forum/?fromgroups#!forum/maven-jmeter-plugin-devs</archive>
-        </mailingList>
-    </mailingLists>
-
-    <scm>
-        <connection>scm:git:git@github.com:Ronnie76er/jmeter-maven-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:Ronnie76er/jmeter-maven-plugin.git</developerConnection>
-        <url>https://github.com/Ronnie76er/jmeter-maven-plugin</url>
-      <tag>HEAD</tag>
-  </scm>
-
-    <distributionManagement>
-        <repository>
-            <id>sonatype-nexus-staging</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jmeter.version>2.8</jmeter.version>
-    </properties>
 
     <dependencies>
         <dependency>
@@ -150,6 +63,7 @@
             <version>1.1</version>
             <scope>test</scope>
         </dependency>
+
         <!-- JMeter dependencies -->
         <dependency>
             <groupId>org.apache.jmeter</groupId>
@@ -249,104 +163,19 @@
                         <target>1.6</target>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>3.0</version>
-                    <configuration>
-                        <locales>en</locales>
-                        <inputEncoding>UTF-8</inputEncoding>
-                        <outputEncoding>UTF-8</outputEncoding>
-                        <reportPlugins>
-                            <reportPlugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-project-info-reports-plugin</artifactId>
-                                <configuration>
-                                    <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
-                                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-                                </configuration>
-                                <reportSets>
-                                    <reportSet>
-                                        <reports>
-                                            <report>index</report>
-                                            <report>summary</report>
-                                            <report>dependency-management</report>
-                                            <report>issue-tracking</report>
-                                            <report>help</report>
-                                            <report>modules</report>
-                                            <report>dependencies</report>
-                                            <report>plugins</report>
-                                            <report>cim</report>
-                                            <report>license</report>
-                                            <report>mailing-list</report>
-                                            <report>project-team</report>
-                                            <report>scm</report>
-                                            <report>dependencies</report>
-                                            <report>distribution-management</report>
-                                        </reports>
-                                    </reportSet>
-                                </reportSets>
-                            </reportPlugin>
-                        </reportPlugins>
-                    </configuration>
-                </plugin>
             </plugins>
         </pluginManagement>
     </build>
 
-    <profiles>
-        <profile>
-            <id>release</id>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-gpg-plugin</artifactId>
-                            <executions>
-                                <execution>
-                                    <id>sign-artifacts</id>
-                                    <phase>verify</phase>
-                                    <goals>
-                                        <goal>sign</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <executions>
-                                <execution>
-                                    <id>attach-javadocs</id>
-                                    <goals>
-                                        <goal>jar</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-source-plugin</artifactId>
-                            <version>2.1.2</version>
-                            <executions>
-                                <execution>
-                                    <id>attach-sources</id>
-                                    <goals>
-                                        <goal>jar-no-fork</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-release-plugin</artifactId>
-                            <version>2.3.1</version>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-    </profiles>
+    <modules>
+        <module>api</module>
+        <module>jmeter-maven.plugin</module>
+        <module>reporting</module>
+    </modules>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jmeter.version>2.8</jmeter.version>
+    </properties>
 
 </project>
