--- a/jmeter/pom.xml
+++ b/jmeter/pom.xml
@@ -9,19 +9,21 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.breedish.test.automator</groupId>
-    <artifactId>jmeter-maven.plugin</artifactId>
+    <artifactId>jmeter</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>jmeter-maven.plugin</name>
-    <url>http://maven.apache.org</url>
+    <name>jmeter</name>
+
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>com.breedish.test.automator</groupId>
+            <artifactId>api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.breedish.test.automator</groupId>
+            <artifactId>reporting</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+
 </project>
