--- a/jmeter-maven-plugin/pom.xml
+++ b/jmeter-maven-plugin/pom.xml
@@ -9,8 +9,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.breedish.test.automator</groupId>
-    <artifactId>maven-plugin</artifactId>
+    <artifactId>jmeter-maven-plugin</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>maven-plugin</packaging>
     <name>jmeter-maven-plugin</name>
 
     <dependencies>
