--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>Test Automator</name>
+    <name>Automator</name>
     <description>A plugin to allow you to run JMeter tests with Maven.</description>
 
     <licenses>
