--- a/pom.xml
+++ b/pom.xml
@@ -2,19 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>oss-parent</artifactId>
-        <groupId>org.sonatype.oss</groupId>
-        <version>7</version>
-    </parent>
-
-    <groupId>com.lazerycode.jmeter</groupId>
+    <groupId>com.mtvi.arc</groupId>
     <artifactId>jmeter-maven-plugin</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
-    <name>JMeter Maven Plugin</name>
+    <name>Arc System Test JMeter Maven Plugin</name>
     <description>A plugin to allow you to run JMeter tests with Maven.</description>
-    <url>http://jmeter.lazerycode.com</url>
 
     <licenses>
         <license>
@@ -27,95 +20,13 @@
 
     <developers>
         <developer>
-            <id>Ardesco</id>
-            <name>Mark Collin</name>
-            <roles>
-                <role>Comitter</role>
-            </roles>
-        </developer>
-        <developer>
-            <id>afranken</id>
-            <name>Arne Franken</name>
-            <roles>
-                <role>Comitter</role>
-            </roles>
-        </developer>
-        <developer>
-            <id>Ronnie76er</id>
-            <name>Ron Alleva</name>
+            <id>zenind</id>
+            <name>Dzmitry Zenin</name>
             <roles>
                 <role>Comitter</role>
             </roles>
         </developer>
     </developers>
-
-    <contributors>
-        <contributor>
-            <name>Tom Coupland</name>
-        </contributor>
-        <contributor>
-            <name>Daniel Yokomizo</name>
-        </contributor>
-        <contributor>
-            <name>Gerd Aschemann</name>
-        </contributor>
-        <contributor>
-            <name>Yoann Ciabaud</name>
-        </contributor>
-        <contributor>
-            <name>Tim McCune</name>
-        </contributor>
-        <contributor>
-            <name>Jon Roberts</name>
-        </contributor>
-        <contributor>
-            <name>Jarrod Ribble</name>
-        </contributor>
-        <contributor>
-            <name>Fabrice Daugan</name>
-        </contributor>
-    </contributors>
-
-    <issueManagement>
-        <system>GitHub</system>
-        <url>https://github.com/Ronnie76er/jmeter-maven-plugin/issues</url>
-    </issueManagement>
-
-    <ciManagement>
-        <system>Teamcity</system>
-        <url>http://ci.lazerycode.com</url>
-    </ciManagement>
-
-    <mailingLists>
-        <mailingList>
-            <name>JMeter Maven Plugin Users</name>
-            <post>maven-jmeter-plugin-users@googlegroups.com</post>
-            <archive>https://groups.google.com/forum/?fromgroups#!forum/maven-jmeter-plugin-users</archive>
-        </mailingList>
-        <mailingList>
-            <name>JMeter Maven Plugin Devs</name>
-            <post>maven-jmeter-plugin-devs@googlegroups.com</post>
-            <archive>https://groups.google.com/forum/?fromgroups#!forum/maven-jmeter-plugin-devs</archive>
-        </mailingList>
-    </mailingLists>
-
-    <scm>
-        <connection>scm:git:git@github.com:Ronnie76er/jmeter-maven-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:Ronnie76er/jmeter-maven-plugin.git</developerConnection>
-        <url>https://github.com/Ronnie76er/jmeter-maven-plugin</url>
-      <tag>HEAD</tag>
-  </scm>
-
-    <distributionManagement>
-        <repository>
-            <id>sonatype-nexus-staging</id>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
