--- a/pom.xml
+++ b/pom.xml
@@ -9,28 +9,19 @@
     <name>Arc System Test JMeter Maven Plugin</name>
     <description>A plugin to allow you to run JMeter tests with Maven.</description>
 
-    <licenses>
-        <license>
-            <name>Apache 2</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-            <comments>A business-friendly OSS license</comments>
-        </license>
-    </licenses>
-
     <developers>
         <developer>
             <id>zenind</id>
             <name>Dzmitry Zenin</name>
             <roles>
-                <role>Comitter</role>
+                <role>Developer</role>
             </roles>
         </developer>
     </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jmeter.version>2.8</jmeter.version>
+        <jmeter.version>2.7</jmeter.version>
     </properties>
 
     <dependencies>
@@ -60,6 +51,16 @@
             <artifactId>maven-plugin-testing-harness</artifactId>
             <version>1.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.3</version>
         </dependency>
         <!-- JMeter dependencies -->
         <dependency>
@@ -160,104 +161,8 @@
                         <target>1.6</target>
                     </configuration>
                 </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>3.0</version>
-                    <configuration>
-                        <locales>en</locales>
-                        <inputEncoding>UTF-8</inputEncoding>
-                        <outputEncoding>UTF-8</outputEncoding>
-                        <reportPlugins>
-                            <reportPlugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-project-info-reports-plugin</artifactId>
-                                <configuration>
-                                    <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
-                                    <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-                                </configuration>
-                                <reportSets>
-                                    <reportSet>
-                                        <reports>
-                                            <report>index</report>
-                                            <report>summary</report>
-                                            <report>dependency-management</report>
-                                            <report>issue-tracking</report>
-                                            <report>help</report>
-                                            <report>modules</report>
-                                            <report>dependencies</report>
-                                            <report>plugins</report>
-                                            <report>cim</report>
-                                            <report>license</report>
-                                            <report>mailing-list</report>
-                                            <report>project-team</report>
-                                            <report>scm</report>
-                                            <report>dependencies</report>
-                                            <report>distribution-management</report>
-                                        </reports>
-                                    </reportSet>
-                                </reportSets>
-                            </reportPlugin>
-                        </reportPlugins>
-                    </configuration>
-                </plugin>
             </plugins>
         </pluginManagement>
     </build>
-
-    <profiles>
-        <profile>
-            <id>release</id>
-            <build>
-                <pluginManagement>
-                    <plugins>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-gpg-plugin</artifactId>
-                            <executions>
-                                <execution>
-                                    <id>sign-artifacts</id>
-                                    <phase>verify</phase>
-                                    <goals>
-                                        <goal>sign</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-javadoc-plugin</artifactId>
-                            <executions>
-                                <execution>
-                                    <id>attach-javadocs</id>
-                                    <goals>
-                                        <goal>jar</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-source-plugin</artifactId>
-                            <version>2.1.2</version>
-                            <executions>
-                                <execution>
-                                    <id>attach-sources</id>
-                                    <goals>
-                                        <goal>jar-no-fork</goal>
-                                    </goals>
-                                </execution>
-                            </executions>
-                        </plugin>
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-release-plugin</artifactId>
-                            <version>2.3.1</version>
-                        </plugin>
-                    </plugins>
-                </pluginManagement>
-            </build>
-        </profile>
-    </profiles>
 
 </project>
