--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -62,6 +61,16 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty</artifactId>
+            <version>6.1.16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+            <version>6.1.16</version>
+        </dependency>
         <!-- JMeter dependencies -->
         <dependency>
             <groupId>org.apache.jmeter</groupId>
@@ -76,6 +85,11 @@
         <dependency>
             <groupId>org.apache.jmeter</groupId>
             <artifactId>ApacheJMeter_components</artifactId>
+            <version>${jmeter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jmeter</groupId>
+            <artifactId>ApacheJMeter_junit-test</artifactId>
             <version>${jmeter.version}</version>
         </dependency>
         <dependency>
